# AoC2023

./: AoC2023.cabal
Solutions/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs
