cabal-version:      3.4
name:               AoC2023
version:            0.1.0.0
-- synopsis:
-- description:
license:            AGPL-3.0-or-later
license-file:       LICENSE
author:             ryndubei
maintainer:         114586905+ryndubei@users.noreply.github.com
-- copyright:
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Solutions.Day1
        Solutions.Day2
        Solutions.Day3
        Solutions.Day4
        Solutions.Day5
        Solutions.Day6
    -- other-modules:
    -- other-extensions:
    build-depends:    
        base ^>=4.17.1.0
      , extra
      , containers
      , MemoTrie
      --, raw-strings-qq
    default-language: GHC2021
